# fusotao

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.lk  Cargo.toml  Functions.md  README.md  chain.spec  docker-compose.yml  funding.json  fusotao-brandy.json  fusotao-mainnet-draft.json  fusotao-mainnet.json  fusotao-mainnet.todo  fusotao-rum.json  fusotao-vodka.json  rustfmt.toml  vodka.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  check.yml  release.yml
cli/: Cargo.toml
cli/res/: octopus-mainnet.json  octopus-testnet.json
cli/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  service.rs
docs/: rust-setup.md
executor/: Cargo.toml
executor/src/: lib.rs
fuso-support/: Cargo.toml
fuso-support/src/: external_chain.rs  lib.rs  traits.rs
inspect/: Cargo.toml
inspect/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/abyss-mall/: Cargo.toml
pallets/abyss-mall/src/: lib.rs
pallets/abyss-tournament/: Cargo.toml
pallets/abyss-tournament/src/: betting_tests.rs  lib.rs  mock.rs  tests.rs
pallets/agent/: Cargo.toml
pallets/agent/src/: lib.rs  mock.rs  tests.rs
pallets/bot/: Cargo.toml
pallets/bot/src/: lib.rs  mock.rs  tests.rs
pallets/chainbridge/: Cargo.toml
pallets/chainbridge-handler/: Cargo.toml
pallets/chainbridge-handler/src/: lib.rs  mock.rs  tests.rs
pallets/chainbridge/src/: lib.rs  mock.rs  tests.rs
pallets/council/: Cargo.toml
pallets/council/src/: lib.rs
pallets/elections/: Cargo.toml
pallets/elections/src/: lib.rs  mock.rs  tests.rs
pallets/foundation/: Cargo.toml
pallets/foundation/src/: lib.rs  mock.rs  tests.rs
pallets/fuso-support/: Cargo.toml
pallets/fuso-support/src/: external_chain.rs  traits.rs
pallets/indicator/: Cargo.toml
pallets/indicator/src/: lib.rs
pallets/mapobridge/: Cargo.toml
pallets/mapobridge/src/: lib.rs
pallets/market/: Cargo.toml
pallets/market/src/: lib.rs  mock.rs  tests.rs
pallets/receipts/src/: lib.rs
pallets/reward/: Cargo.toml
pallets/reward/src/: lib.rs  mock.rs  tests.rs
pallets/samsara/: Cargo.toml
pallets/samsara/src/: lib.rs  mock.rs
pallets/token/: Cargo.toml
pallets/token/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/verifier/: Cargo.toml
pallets/verifier/src/: benchmarking.rs  lib.rs  mock.rs  proof.rs  tests.rs  weights.rs
primitives/: Cargo.toml
resources/: octopus-mainnet.json  octopus-testnet.json  testnet.json
rpc/: Cargo.toml
rpc-service/: Cargo.toml
rpc-service/src/: lib.rs
rpc/src/: broker.rs  lib.rs  prover.rs  token.rs
rpc/src/broker/: backend.rs  mod.rs  relay.rs
rpc/src/verifier/: mod.rs
runtime/: Cargo.toml
runtime-api/: Cargo.toml
runtime-api/src/: lib.rs  verifier.rs
runtime-api/verifier/: Cargo.toml
runtime-api/verifier/src/: lib.rs
runtime/src/: constants.rs  lib.rs
