[profile.release]
panic = 'unwind'

[workspace]
members = [
    'executor',
    'inspect',
    'primitives',
    'cli',
    'runtime',
    'runtime-api',
    'rpc',
    'rpc-service',
    'pallets/fuso-support',
    'pallets/token',
    'pallets/verifier',
    'pallets/foundation',
    'pallets/reward',
    'pallets/agent',
    'pallets/indicator',
    'pallets/market',
    'pallets/chainbridge',
    'pallets/chainbridge-handler',
]
