[package]
name = "fuso-primitives"
version = "4.0.1"
authors = ["Fusotao Team <hi@fusotao.org>"]
description = "Fusotao node low-level primitives."
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-application-crypto = { version = "6.0.0", default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
