[package]
name = "fuso-rpc-service"
version = "4.0.1"
authors = ['Fusotao Team <hi@fusotao.org>']
description = "Fusotao node rpc methods."
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server"] }
pallet-mmr-rpc = { version = "3.0.0", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-consensus-babe-rpc = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-consensus-epochs = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-finality-grandpa-rpc = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-rpc-spec-v2 = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-consensus-babe = { version = "0.10.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-keystore = { version = "0.12.0", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
sp-runtime = { version = "6.0.0", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
fuso-primitives = { path = "../primitives" }
fuso-rpc = { path = "../rpc" }
beefy-gadget = { git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
beefy-gadget-rpc = { git = "https://github.com/uinb/substrate.git", branch = "polkadot-v0.9.30" }
