[package]
name = "fuso-rpc"
version = "4.0.2"
authors = ["UINB Tech <hi@fusotao.org>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.fusotao.org"
repository = "https://github.com/uinb/fusotao"
description = "Fusotao RPC service"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
jsonrpsee = {version = "0.15.1", features = ["server", "macros", "ws-client", "client-ws-transport" ] }
async-trait = "0.1.65"
futures = "0.3.26"
dashmap = "5.4.0"
hex-literal = "0.3.4"
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30"  }
fuso-verifier-runtime-api = { path = "../runtime-api/verifier"}
